# docs/swagger.yaml
@@ -103,8 +103,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/v1.response'
         "400":
